--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 
                 Ta bị bắt và giam trong trường Valkyre.
             Kanna và CLB an toàn đời sống xuất hiện để cứu giúp ta.</li>
-            <li>Đột kích (Trong tầm ngắm) 2:</li>
+            <li>Đột kích (Trong tầm ngắm) 2:
+            Kaiser đánh chiếm Hội HS liên bang và bắt chúng ta.
+Kanna giải cứu ta, tiết lộ rằng Kaiser đã cài người của họ vào trường.</li>
             <li>Trốn thoát 1:
 
             Chúng ta cùng Kanna và CLB an toàn đời sống cố gắng thoát khỏi quân Kaiser, nhưng bị dồn vào góc.</li>
